# qnx-skunkworks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-qnx-vm.sh  start-qnx-vm.sh  stop-qnx-vm.sh
cmake/: cmake-build-qnx.sh  cmake-build.sh  qnx-env.sh  qnx.toolchain.cmake
qnx-vm/: .project  .trgtproject
qnx-vm/keys/: qnx-target  qnx-target.pub
qnx-vm/local/: options  options.orig
qnx-vm/local/misc_files/: hosts  ssh_host_ed25519_key  ssh_host_ed25519_key.pub  ssh_host_rsa_key  ssh_host_rsa_key.pub
qnx-vm/local/snippets/: data_files.custom  ifs_files.custom
src/: CMakeLists.txt
src/qnx-demo/: curl_network_transport.cpp  generic_network_transport.hpp  main.cpp  test_data.cpp  test_data.hpp
